@@ -2,6 +2,7 @@
 - Fixed playback and export issues that could ensue when a note was placed just before the playback start
 - Fixed issues with loop
 - Fixed playback sometimes stopping very sharply, not leaving time for notes to ring
+- Mark the measure where the song starts in the measure bar
 
 1.4.1
 - Use more standard 44100 Hz when exporting to sampled audio on OSX
